# xrlflow

./: LICENSE  README.md  docker_build_note.txt  requirements.txt
python/: setup.py
python/graph_rewriter/: README.md  requirements.txt
python/graph_rewriter/_cython/: CCore.pxd  CExt.pxd  core.pyx
python/graph_rewriter/agents/: base_agent.py  gat_hierarchical_agent.py  gat_hierarchical_agent_v2.py  gat_ppo_agent.py  gn_ppo_agent.py  models.py
python/graph_rewriter/agents/encoder/: gnn.py
python/graph_rewriter/environment/: taso_base.py  taso_hierarchical.py
python/graph_rewriter/examples/: check_complexity.py  run_gat_hierarchical_rl.py  run_gat_hierarchical_rl_v2.py  run_gn_ppo.py  run_inference.py  run_inference_ppo.py  run_inference_sparse_ppo.py  run_ppo.py  run_taso_opt.py  run_tvm.py
python/graph_rewriter/graphs/: bert.py  inceptionv3.py  mini_dalle.py  onnx_util.py  resnext_50.py  t-t.py  util.py  vit_base.py
python/graph_rewriter/utils/: import_onnx.py  inference.py
taso-build/include/taso/: cuda_helper.h  ops.h  ops.h.orig  ops.h.rej  substitution.h
taso-build/python/taso.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
taso-build/python/taso/_cython/: CCore.pxd  CCore.pxd.orig  core.cpp  core.pyx  core.pyx.orig
taso-build/src/core/: activation.cc  batchnorm.cc  broadcast_add.cc  cast.cc  concat.cc  conv2d.cc  element.cc  elementwise_unary.cc  fuse_conv_batchnorm.cc  fuse_conv_batchnorm_alpha_var.cc  fuse_conv_batchnorm_bias.cc  matmul.cc  ops.cc  ops.cc.orig  pad.cc  pool2d.cc  reduce.cc  shape.cc  split.cc  squeeze.cc  substitution.cc  topk.cc  where.cc
taso-build/src/cudnn/: ops_cudnn.cu
taso_ext/: CMakeLists.txt  TASO_01_get_pointer_address.patch  TASO_02_run_memorysafe.patch  TASO_03_get_costs.patch  TASO_04_export_onnx.patch
taso_ext/src/: graph_feedback.cc  graph_feedback.h  ippcuda.supp  test_graph_feedback.cc  test_taso_opt.cc  test_xfers.cc
